OLCS-14906 - fixing layout issue with RO user

--- a/assets/_styles/components/read-only.scss
+++ b/assets/_styles/components/read-only.scss
@@ -56,6 +56,7 @@
  */
 
 .definition-list {
+  $this: &;
   float: left;
   border-bottom: 1px solid $grey-3;
   margin: 0;
@@ -75,6 +76,10 @@
     &__item {
       width: 50%;
       float: left;
+      // OLCS-14906 - hack to fix layout issues
+      &.readonly {
+        width: 100%;
+      }
     }
   }
 }
